<resources>
	<string name="app_name">Authenticator</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_settings">Settings</string>
	<string name="action_add">Add Account</string>
	<string name="add_method_manual">Enter a key</string>
	<string name="add_method_qr">Scan a QR code</string>

	<string name="account_manual_secret_hint">Account secret (or key)</string>
	<string name="account_manual_issuer_hint">Site name</string>
	<string name="account_manual_user_hint">Your username (optional)</string>
	<string name="account_manual_type_prompt">Type</string>
	<string name="account_manual_submit">Add</string>
	<string name="account_manual_secret_invalid">That secret doesn\'t work</string>
	<string name="account_manual_secret_required">A secret is required</string>
	<string name="account_manual_issuer_required">The site name is required to help you identify it</string>

	<string name="account_qr_awaiting_permissions">Waiting for permission to access Camera</string>

	<string name="account_type_totp">Time-based</string>
	<string name="account_type_hotp">Counter-based</string>

	<string name="validate_too_short">At least %d characters are required</string>
	<string name="validate_required">This field is required</string>


	<!-- Strings related to Settings -->
	<string name="pref_title_time_offset">Time Correction (seconds)</string>
</resources>
