<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 xmlns:validate="http://schemas.android.com/apk/res-auto"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 tools:context="net.jackw.authenticator.ui.AccountAddManual">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:orientation="vertical">

		<net.jackw.authenticator.ui.ValidatableTextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/input_secret_container"
			validate:required="true"
			validate:requiredText="@string/account_manual_secret_required">
			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_secret"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/account_manual_secret_hint"
				android:inputType="textNoSuggestions|textVisiblePassword|textCapCharacters"/>
		</net.jackw.authenticator.ui.ValidatableTextInputLayout>

		<net.jackw.authenticator.ui.ValidatableTextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/input_issuer_container"
			validate:required="true"
			validate:requiredText="@string/account_manual_issuer_required">
			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_issuer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/account_manual_issuer_hint"
				android:inputType="text|textCapWords"/>
		</net.jackw.authenticator.ui.ValidatableTextInputLayout>

		<net.jackw.authenticator.ui.ValidatableTextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/input_user_container">
			<android.support.design.widget.TextInputEditText
				android:id="@+id/input_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/account_manual_user_hint"
				android:inputType="text"/>
		</net.jackw.authenticator.ui.ValidatableTextInputLayout>

		<Spinner
			android:id="@+id/input_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:prompt="@string/account_manual_type_prompt"/>

		<Button
			android:id="@+id/submit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:text="@string/account_manual_submit"
			style="@style/Widget.AppCompat.Button.Colored"/>
	</LinearLayout>

</FrameLayout>
